adding bd configuration

--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ DB_PASSWORD=postgres
 
 PGDATABASE=railway
 PGHOST=junction.proxy.rlwy.net
-PGPASSWORD=nJDJVvTlHLXHzmxjxkQClBXtfsMNchdX
+PGPASSWORD=postgres
 PGPORT=37175
 PGUSER=postgres
