--- a/.env
+++ b/.env
@@ -1,12 +1,13 @@
-DB_DIALECT=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=gymfit
-DB_USER=postgres
-DB_PASSWORD=postgres
+# DB_DIALECT=postgres
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_NAME=gymfit
+# DB_USER=postgres
+# DB_PASSWORD=postgres
 
 PGDATABASE=railway
 PGHOST=junction.proxy.rlwy.net
-PGPASSWORD=postgres
+PGPASSWORD=postgresgymfit
 PGPORT=37175
 PGUSER=postgres
+DATABASE_URL=postgres://postgres:postgresgymfit@junction.proxy.rlwy.net:37175/railway
